--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@guildedjs/guilded.js": "^2.2.1",
     "@guildedjs/webhook-client": "^1.0.4",
     "better-sqlite3": "^7.4.3",
-    "sqlite3": "^5.0.2"
+    "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2"
   }
 }
