--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "main": "bot.js",
   "type": "commonjs",
   "engines": {
-    "node": "20.x"
+    "node": "21.x"
   },
   "repository": "https://github.com/NeXi420/EdwardBot_Guilded.git",
   "author": "NeXi <43706130+NeXi420@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^9.0.0",
     "dotenv": "^16.3.1",
     "guilded.js": "^0.23.7",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
-    "quick.db": "^9.1.7"
-  }
+    "mongodb": "^6.3.0"
+  },
+  "packageManager": "yarn@4.0.2"
 }
